--- a/AppleMusicStApp/AppleMusicStApp/Home/Base.lproj/Main.storyboard
+++ b/AppleMusicStApp/AppleMusicStApp/Home/Base.lproj/Main.storyboard
@@ -23,13 +23,13 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gKu-lm-E6E">
                                     <size key="itemSize" width="180" height="240"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="headerReferenceSize" width="414" height="296"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TrackCollecionViewCell" id="3R3-Du-kYo" customClass="TrackCollecionViewCell" customModule="AppleMusicStApp" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="20" width="180" height="240"/>
+                                        <rect key="frame" x="20" y="316" width="180" height="240"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1Ah-kk-zav">
                                             <rect key="frame" x="0.0" y="0.0" width="180" height="240"/>
@@ -72,6 +72,71 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TrackCollectionHeaderView" id="nZu-Ks-qnJ" customClass="TrackCollectionHeaderView" customModule="AppleMusicStApp" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="296"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today's Pick!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWO-Td-fUX">
+                                            <rect key="frame" x="20" y="30" width="185" height="36"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ydf-Ge-WhM">
+                                            <rect key="frame" x="28" y="66" width="366" height="200"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="200" id="ct4-Ye-B6s"/>
+                                            </constraints>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ic0-Pv-YeL">
+                                            <rect key="frame" x="28" y="66" width="366" height="200"/>
+                                            <connections>
+                                                <action selector="cardTapped:" destination="nZu-Ks-qnJ" eventType="touchUpInside" id="yK4-yT-R3e"/>
+                                            </connections>
+                                        </button>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="RlW-Ta-Wqr">
+                                            <rect key="frame" x="349" y="226.5" width="35" height="34"/>
+                                            <color key="tintColor" systemColor="systemPinkColor"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLAY NOW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RYo-KZ-fWd">
+                                            <rect key="frame" x="38" y="210.5" width="75" height="17"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OjM-UZ-pWs">
+                                            <rect key="frame" x="38" y="227.5" width="289.5" height="33.5"/>
+                                            <string key="text">PLAY NOW
+Today's pick is silo's album DDDD-. let's listen</string>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="RlW-Ta-Wqr" firstAttribute="bottom" secondItem="Ydf-Ge-WhM" secondAttribute="bottom" constant="-5" id="19q-Yz-Qqn"/>
+                                        <constraint firstItem="OjM-UZ-pWs" firstAttribute="top" secondItem="RYo-KZ-fWd" secondAttribute="bottom" id="2RD-xw-sCo"/>
+                                        <constraint firstItem="Ydf-Ge-WhM" firstAttribute="leading" secondItem="nZu-Ks-qnJ" secondAttribute="leading" constant="28" id="CcR-Cg-XWF"/>
+                                        <constraint firstItem="RlW-Ta-Wqr" firstAttribute="trailing" secondItem="Ydf-Ge-WhM" secondAttribute="trailing" constant="-10" id="EDD-SW-rje"/>
+                                        <constraint firstItem="Ydf-Ge-WhM" firstAttribute="top" secondItem="EWO-Td-fUX" secondAttribute="bottom" id="HYz-KU-uRF"/>
+                                        <constraint firstItem="OjM-UZ-pWs" firstAttribute="bottom" secondItem="Ydf-Ge-WhM" secondAttribute="bottom" constant="-5" id="IgL-tk-6LT"/>
+                                        <constraint firstItem="ic0-Pv-YeL" firstAttribute="trailing" secondItem="Ydf-Ge-WhM" secondAttribute="trailing" id="V3l-E9-bk3"/>
+                                        <constraint firstItem="ic0-Pv-YeL" firstAttribute="leading" secondItem="Ydf-Ge-WhM" secondAttribute="leading" id="XbQ-5Z-XTk"/>
+                                        <constraint firstItem="RlW-Ta-Wqr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="OjM-UZ-pWs" secondAttribute="trailing" constant="15" id="cnH-s7-Hzb"/>
+                                        <constraint firstItem="OjM-UZ-pWs" firstAttribute="leading" secondItem="Ydf-Ge-WhM" secondAttribute="leading" constant="10" id="dIB-1e-ifV"/>
+                                        <constraint firstItem="ic0-Pv-YeL" firstAttribute="top" secondItem="Ydf-Ge-WhM" secondAttribute="top" id="los-VC-wyY"/>
+                                        <constraint firstItem="EWO-Td-fUX" firstAttribute="leading" secondItem="nZu-Ks-qnJ" secondAttribute="leading" constant="20" id="meG-gQ-489"/>
+                                        <constraint firstAttribute="trailing" secondItem="Ydf-Ge-WhM" secondAttribute="trailing" constant="20" id="nbd-Xf-tz4"/>
+                                        <constraint firstItem="RYo-KZ-fWd" firstAttribute="leading" secondItem="Ydf-Ge-WhM" secondAttribute="leading" constant="10" id="sza-l7-tiQ"/>
+                                        <constraint firstItem="EWO-Td-fUX" firstAttribute="top" secondItem="nZu-Ks-qnJ" secondAttribute="top" constant="30" id="tTF-vy-OHx"/>
+                                        <constraint firstItem="ic0-Pv-YeL" firstAttribute="bottom" secondItem="Ydf-Ge-WhM" secondAttribute="bottom" id="wZT-oX-UKg"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="descriptionLabel" destination="OjM-UZ-pWs" id="bcY-FK-2ZD"/>
+                                        <outlet property="thumbnailImageView" destination="Ydf-Ge-WhM" id="SAQ-Fw-lbu"/>
+                                    </connections>
+                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="lNm-RH-ITR"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="CGK-aG-W0w"/>
@@ -94,8 +159,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="play.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
