--- a/MyNetflix/MyNetflix/Base.lproj/Main.storyboard
+++ b/MyNetflix/MyNetflix/Base.lproj/Main.storyboard
@@ -177,14 +177,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hnt-et-gb3">
-                                                    <rect key="frame" x="-56" y="0.0" width="240" height="128"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="hnt-et-gb3" firstAttribute="top" secondItem="tMb-VA-vIM" secondAttribute="top" id="3fv-Yy-hPT"/>
                                                 <constraint firstAttribute="bottom" secondItem="hnt-et-gb3" secondAttribute="bottom" id="9ko-sy-gHT"/>
-                                                <constraint firstAttribute="trailing" secondItem="hnt-et-gb3" secondAttribute="trailing" constant="-56" id="zPr-Fz-EJE"/>
-                                                <constraint firstItem="hnt-et-gb3" firstAttribute="leading" secondItem="tMb-VA-vIM" secondAttribute="leading" constant="-56" id="zeN-Jv-evr"/>
+                                                <constraint firstAttribute="trailing" secondItem="hnt-et-gb3" secondAttribute="trailing" id="zPr-Fz-EJE"/>
+                                                <constraint firstItem="hnt-et-gb3" firstAttribute="leading" secondItem="tMb-VA-vIM" secondAttribute="leading" id="zeN-Jv-evr"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
